--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "waggish",
-  "version": "1.2.0",
+  "version": "0.0.0-semantically-released",
   "description": "Get random humorous loading message.",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha src/index.test.js -w"
+    "commit": "git-cz",
+    "test": "mocha src/index.test.js -w",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/distalx/waggish.git"
+    "url": "https://github.com/distalx/waggish.git"
   },
   "keywords": [
     "random",
@@ -26,6 +28,12 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "mocha": "3.0.2"
+    "commitizen": "2.8.5",
+    "cz-conventional-changelog": "1.1.7",
+    "mocha": "3.0.2",
+    "semantic-release": "^4.3.5"
+  },
+  "czConfig":{
+    "path": "node_modules/cz-conventional-changelog"
   }
 }
