--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "commit": "git-cz",
     "test": "mocha src/index.test.js -w",
-    "test:single": "mocha src/index.test.js",
+    "test:single": "istanbul cover -x *.test.js _mocha -- -R spec src/index.test.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
@@ -32,14 +32,15 @@
     "commitizen": "2.8.5",
     "cz-conventional-changelog": "1.1.7",
     "ghooks": "1.3.2",
+    "istanbul": "0.4.4",
     "mocha": "3.0.2",
     "semantic-release": "^4.3.5"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
   },
-  "config":{
-    "ghooks":{
+  "config": {
+    "ghooks": {
       "pre-commit": "npm run test:single"
     }
   }
