--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "waggish",
   "version": "0.0.0-semantically-released",
   "description": "Get random humorous loading message.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "prebuild": "rimraf dist && mkdir dist",
+    "build": "babel --copy-files --out-dir dist --ignore *.test.js src",
     "commit": "git-cz",
-    "test": "mocha src/index.test.js -w",
-    "test:single": "istanbul cover -x *.test.js _mocha -- -R spec src/index.test.js",
-    "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "cover": "nyc npm t",
+    "watch:test": "npm t -- -w",
+    "test": "mocha src/index.test.js  --compilers js:babel-register",
+    "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
@@ -20,6 +23,10 @@
     "loding",
     "message"
   ],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "author": "distalx <distalx@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -30,6 +37,9 @@
     "unique-random-array": "1.0.0"
   },
   "devDependencies": {
+    "babel-cli": "6.11.4",
+    "babel-preset-stage-2": "6.13.0",
+    "babel-register": "6.11.6",
     "chai": "3.5.0",
     "codecov.io": "0.1.6",
     "commitizen": "2.8.5",
@@ -37,14 +47,22 @@
     "ghooks": "1.3.2",
     "istanbul": "0.4.4",
     "mocha": "3.0.2",
+    "nyc": "7.1.0",
+    "rimraf": "2.5.4",
     "semantic-release": "^4.3.5"
-  },
-  "czConfig": {
-    "path": "node_modules/cz-conventional-changelog"
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm run test:single && npm run check-coverage"
+      "pre-commit": "npm run cover && npm run check-coverage"
+    },
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
     }
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-2"
+    ]
   }
 }
