--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist && mkdir dist",
-    "build": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build": "npm-run-all --parallel build:*",
+    "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build:umd": "webpack --output-filename index.umd.js",
+    "build:umd.min": "webpack --output-filename index.umd.min.js -p",
     "commit": "git-cz",
     "cover": "nyc npm t",
     "watch:test": "npm t -- -w",
@@ -38,6 +41,7 @@
   },
   "devDependencies": {
     "babel-cli": "6.11.4",
+    "babel-loader": "6.2.4",
     "babel-preset-stage-2": "6.13.0",
     "babel-register": "6.11.6",
     "chai": "3.5.0",
@@ -46,10 +50,13 @@
     "cz-conventional-changelog": "1.1.7",
     "ghooks": "1.3.2",
     "istanbul": "0.4.4",
+    "json-loader": "0.5.4",
     "mocha": "3.0.2",
+    "npm-run-all": "2.3.0",
     "nyc": "7.1.0",
     "rimraf": "2.5.4",
-    "semantic-release": "^4.3.5"
+    "semantic-release": "^4.3.5",
+    "webpack": "1.13.1"
   },
   "config": {
     "ghooks": {
