--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "prebuild": "rimraf dist && mkdir dist",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
-    "build:umd": "webpack --output-filename index.umd.js",
-    "build:umd.min": "webpack --output-filename index.umd.min.js -p",
+    "build:umd": "webpack --output-filename waggish.js",
+    "build:umd.min": "webpack --output-filename waggish.min.js -p",
     "commit": "git-cz",
     "cover": "nyc npm t",
     "watch:test": "npm t -- -w",
